fix button text wrapping

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,6 +10,7 @@
   color: var(--button-primary-text);
   height: 52px;
   width: fit-content;
+  white-space: nowrap;
 }
 
 .button:hover:enabled {
